[package]
name = "peers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peers_core = {path = "peers_core"}



[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }
ntest = "0.9.0"

[workspace]
members = ["peers_cli","peers_core", "peers_ui"]

[workspace.dependencies]
peers_core = {path = "peers_core"}


[features]
# i don't want to run theese tests on github's ci
# use cargo test --features no_p2p_tests features to skip them
no_p2p_tests = []
