[package]
name = "peers_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
peers_core = { workspace = true }
cfg-if = "1.0.0"

[dev-dependencies]

[features]
gui = []
