[package]
name = "peers_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
futures = "0.3.29"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.12"
sha1 = "0.10.6"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
urlencoding = "2.1.3"